--- a/TrabalhoFinal.ipynb
+++ b/TrabalhoFinal.ipynb
@@ -41,6 +41,7 @@
     "| Bruno Campos Ribeiro | 211039288 |\n",
     "| Igor e Silva Penha | 211029352 |\n",
     "| Thauany Vieira Brito | 241011878 |\n",
+    "| Ian da Costa Gama |  190125829 |\n",
     "\n",
     "---\n"
    ]
