--- a/TrabalhoFinal.ipynb
+++ b/TrabalhoFinal.ipynb
@@ -178,6 +178,196 @@
     "print(\"Integral =\", integral)\n",
     "print(\"Corrente RMS no meio período =\", I_rms_half)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2d0f0308",
+   "metadata": {},
+   "source": [
+    "# Questão 4 - Diagrama de Bifurcação do Mapa Logístico\n",
+    "\n",
+    "**Função:** $G(x) = rx(1-x)$\n",
+    "\n",
+    "Nesta questão, vamos construir o diagrama de bifurcação do mapa logístico para dois intervalos diferentes:\n",
+    "- (a) $r \\in [2.5, 4.0]$ - Visão geral\n",
+    "- (b) $r \\in [3.62, 3.64]$ - Zoom em região com bifurcações"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6aa0a023",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "be2c5896",
+   "metadata": {},
+   "source": [
+    "## Definição da Função do Mapa Logístico"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5ba03659",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def mapa_logistico(x, r):\n",
+    "    \"\"\"Função do mapa logístico G(x) = rx(1-x)\"\"\"\n",
+    "    x = r * x * (1 - x)\n",
+    "    return x"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "50d1bd4c",
+   "metadata": {},
+   "source": [
+    "## Função para Gerar o Diagrama de Bifurcação"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fe6ada91",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def diagrama_bifurcacao(rinit, rend, num_pontos_r=500, num_transiente=500, num_plotados=100):\n",
+    "    \"\"\"\n",
+    "    Gera o diagrama de bifurcação do mapa logístico.\n",
+    "    \n",
+    "    Parâmetros:\n",
+    "    -----------\n",
+    "    rinit : float\n",
+    "        Valor inicial de r\n",
+    "    rend : float\n",
+    "        Valor final de r\n",
+    "    num_pontos_r : int\n",
+    "        Número de valores de r a serem testados\n",
+    "    num_transiente : int\n",
+    "        Número de iterações para descartar (transiente)\n",
+    "    num_plotados : int\n",
+    "        Número de pontos a serem plotados após o transiente\n",
+    "    \n",
+    "    Retorna:\n",
+    "    --------\n",
+    "    buffer_r, buffer_diagrama : arrays\n",
+    "        Arrays com os valores de r e x para plotagem\n",
+    "    \"\"\"\n",
+    "    buffer_r = np.zeros(num_pontos_r * num_plotados)\n",
+    "    buffer_diagrama = np.zeros(num_pontos_r * num_plotados)\n",
+    "    k = 0\n",
+    "    \n",
+    "    for i in range(num_pontos_r):\n",
+    "        r = rinit + i * (rend - rinit) / num_pontos_r\n",
+    "        x = 0.1  # Condição inicial\n",
+    "        \n",
+    "        # Descarta valores transientes\n",
+    "        for j in range(num_transiente):\n",
+    "            x = mapa_logistico(x, r)\n",
+    "        \n",
+    "        # Armazena os valores após o transiente\n",
+    "        for j in range(num_plotados):\n",
+    "            x = mapa_logistico(x, r)\n",
+    "            buffer_r[k] = r\n",
+    "            buffer_diagrama[k] = x\n",
+    "            k = k + 1\n",
+    "    \n",
+    "    return buffer_r, buffer_diagrama"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1cb38a60",
+   "metadata": {},
+   "source": [
+    "## (a) Diagrama de Bifurcação para $r \\in [2.5, 4.0]$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0b4a05f1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Gera o diagrama para r ∈ [2.5, 4.0]\n",
+    "rinit_a = 2.5\n",
+    "rend_a = 4.0\n",
+    "\n",
+    "buffer_r_a, buffer_diagrama_a = diagrama_bifurcacao(rinit_a, rend_a)\n",
+    "\n",
+    "# Plotagem\n",
+    "plt.figure(figsize=(12, 8))\n",
+    "plt.scatter(buffer_r_a, buffer_diagrama_a, s=0.01, color='black')\n",
+    "plt.xlabel('r', fontsize=14)\n",
+    "plt.ylabel('x', fontsize=14)\n",
+    "plt.title('Diagrama de Bifurcação do Mapa Logístico: $r \\in [2.5, 4.0]$', fontsize=16)\n",
+    "plt.grid(True, alpha=0.3)\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ef1e5cf3",
+   "metadata": {},
+   "source": [
+    "## (b) Diagrama de Bifurcação para $r \\in [3.62, 3.64]$ (Zoom)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "efbe4276",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Gera o diagrama para r ∈ [3.62, 3.64] - Zoom em região específica\n",
+    "rinit_b = 3.62\n",
+    "rend_b = 3.64\n",
+    "\n",
+    "buffer_r_b, buffer_diagrama_b = diagrama_bifurcacao(rinit_b, rend_b)\n",
+    "\n",
+    "# Plotagem\n",
+    "plt.figure(figsize=(12, 8))\n",
+    "plt.scatter(buffer_r_b, buffer_diagrama_b, s=0.05, color='darkblue')\n",
+    "plt.xlabel('r', fontsize=14)\n",
+    "plt.ylabel('x', fontsize=14)\n",
+    "plt.title('Diagrama de Bifurcação do Mapa Logístico: $r \\in [3.62, 3.64]$ (Zoom)', fontsize=16)\n",
+    "plt.grid(True, alpha=0.3)\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0d6860b4",
+   "metadata": {},
+   "source": [
+    "## Análise dos Resultados\n",
+    "\n",
+    "### Diagrama completo ($r \\in [2.5, 4.0]$):\n",
+    "Este diagrama mostra a evolução completa do comportamento do mapa logístico:\n",
+    "- Para $r < 3$: Um único ponto fixo estável\n",
+    "- Para $r \\approx 3$: Primeira bifurcação (período 2)\n",
+    "- Para $3 < r < 3.57$: Cascata de bifurcações (períodos 4, 8, 16, ...)\n",
+    "- Para $r > 3.57$: Região caótica com janelas de periodicidade\n",
+    "\n",
+    "### Diagrama zoom ($r \\in [3.62, 3.64]$):\n",
+    "Esta região mostra detalhes da estrutura fractal do diagrama de bifurcação, revelando:\n",
+    "- Autossimilaridade: padrões que se repetem em escalas menores\n",
+    "- Janelas de periodicidade em meio ao caos\n",
+    "- Estrutura complexa típica de sistemas dinâmicos caóticos"
+   ]
   }
  ],
  "metadata": {
