--- a/TrabalhoFinal.ipynb
+++ b/TrabalhoFinal.ipynb
@@ -42,6 +42,7 @@
     "| Igor e Silva Penha | 211029352 |\n",
     "| Thauany Vieira Brito | 241011878 |\n",
     "| Ian da Costa Gama |  190125829 |\n",
+     "| Cauã Clemente Oliveira | 222006623 |\n",
     "\n",
     "---\n"
    ]
