--- a/TrabalhoFinal.ipynb
+++ b/TrabalhoFinal.ipynb
@@ -42,7 +42,7 @@
     "| Igor e Silva Penha | 211029352 |\n",
     "| Thauany Vieira Brito | 241011878 |\n",
     "| Ian da Costa Gama |  190125829 |\n",
-     "| Cauã Clemente Oliveira | 222006623 |\n",
+    "| Cauã Clemente Oliveira | 222006623 |\n",
     "\n",
     "---\n"
    ]
@@ -185,7 +185,7 @@
    "id": "2d0f0308",
    "metadata": {},
    "source": [
-    "# Questão 4 - Diagrama de Bifurcação do Mapa Logístico\n",
+    "## 4. (2 pontos, Ref. [1]) - Diagrama de Bifurcação do Mapa Logístico\n",
     "\n",
     "**Função:** $G(x) = rx(1-x)$\n",
     "\n",
